fix:mobile layout is too wide and cuts off

--- a/src/assets/scss/_fachportal.scss
+++ b/src/assets/scss/_fachportal.scss
@@ -73,7 +73,6 @@ $fachportal_bright: $wlo-primary;
 
   .portal-wrapper-left {
     width: 1200px;
-    min-width: 620px;
     max-width: 100%;
     background: #f4f4f4;
     border-radius: 24px 24px 0 0;
